# rent

./: .env  Cargo.toml
src/: main.rs
src/auth/: authentication.rs
src/email/: email.rs
src/enums/: mod.rs  platform_enum.rs  roles_enum.rs  subscription_enum.rs
src/models/: customer.rs  games.rs  mod.rs
src/persistence/: init_database.rs  mod.rs  postgres_db.rs
src/routes/: routes.rs
src/utils/: id_generator.rs  mod.rs  password_helper.rs
