[package]
name = "game_rent"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["raw_value"] }
dotenvy = "0.15.7"
log = "0.4.22"
rocket_prometheus = "0.10.0"
rocket_cors = "0.6.0"
chrono = "0.4.38"
mockall = "0.11" # or the latest version
tokio = "1.40.0"
async-trait = "0.1.82"
once_cell = "1.19.0"
uuid = { version = "1.2.2", features = ["v4"] }

